docs/7.56/md/abenrestricted_apis.md
---
title: "Working with released APIs"
description: |
  In strict ABAP development environments(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenstrict_abap_dev_envir_glosry.htm 'Glossary Entry'), a restricted ABAP language version(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrestricted_version_glosry.htm 'Glossary Ent
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrestricted_apis.htm"
abapFile: "abenrestricted_apis.htm"
keywords: ["do", "try", "abenrestricted", "apis"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Rules for Strict ABAP](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_strict_rules.htm) → 

Working with released APIs

In [strict ABAP development environments](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenstrict_abap_dev_envir_glosry.htm "Glossary Entry"), a [restricted ABAP language version](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrestricted_version_glosry.htm "Glossary Entry") must be used, where access to [repository objects](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrepository_object_glosry.htm "Glossary Entry") is restricted to [released APIs](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenreleased_api_glosry.htm "Glossary Entry"). The topic [Released APIs](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenreleased_apis.htm) provides an overview of APIs that are released for the restricted ABAP language versions allowed in a strict development environment.

Changes to released APIs are strictly governed by [release contracts](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrelease_contract_glosry.htm "Glossary Entry"). These release contracts describe which compatible changes are allowed for a released API from release to release. ABAP developments that access such APIs must be aware of the possibility of such compatible changes and design the access accordingly. The following topics describe the allowed compatible changes and contain rules for accessing such released APIs.

-   [Compatibility Rules for the C1 Contract](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenc1_compatibility_rules.htm)

Continue
[Compatibility Rules for the C1 Contract](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenc1_compatibility_rules.htm)