docs/7.57/md/abenrestricted_apis.md
---
title: "Contract Rules for Released APIs"
description: |
  In strict ABAP development environments(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstrict_abap_dev_envir_glosry.htm 'Glossary Entry') changes and extensions to released APIs are strictly governed by release contracts(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrestricted_apis.htm"
abapFile: "abenrestricted_apis.htm"
keywords: ["do", "if", "try", "abenrestricted", "apis"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Rules for Strict ABAP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_strict_rules.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Contract Rules for Released APIs, ABENRESTRICTED_APIS, 757%0D%0A%0D%0AError:%0D%0A%0D
%0A%0D%0A%0D%0ASuggestion for improvement:)

Contract Rules for Released APIs

In [strict ABAP development environments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstrict_abap_dev_envir_glosry.htm "Glossary Entry") changes and extensions to released APIs are strictly governed by [release contracts](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrelease_contract_glosry.htm "Glossary Entry"). These release contracts describe which compatible changes and extensions are allowed for a released API from release to release. ABAP developments that access such APIs must be aware of the possibility of such compatible changes and design the access accordingly. The following topics describe the allowed compatible changes or extensions and contain rules for accessing such released APIs.

-   [C1 Contract Rules](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenc1_contract_rules.htm)
-   [C0 Contract Rules](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenc0_contract_rules.htm)

Hint

The topic [Released APIs](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenreleased_apis.htm) provides an overview of APIs that are released for the restricted ABAP language versions allowed in a strict development environment.

Continue
[C1 Contract Rules](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenc1_contract_rules.htm)
[C0 Contract Rules](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenc0_contract_rules.htm)